modify jdbc implementation according to updated task